--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build:
   stage: build
   script:
     - npm ci
-    - npm run build
+    - CI=false npm run build
   artifacts:
     paths:
       - build/
